[gd_scene load_steps=12 format=3 uid="uid://1oyanh88quf"]

[ext_resource type="Script" uid="uid://drcjg07q2scop" path="res://scenes/main/player_info.gd" id="1_6578i"]
[ext_resource type="Texture2D" uid="uid://0uexilma0ilb" path="res://assets/texture/player_skin/dude.png" id="1_ypi7l"]
[ext_resource type="FontFile" uid="uid://ir3t8xybm2be" path="res://assets/font/Bungee-Regular.ttf" id="2_5snxr"]
[ext_resource type="FontFile" uid="uid://beyr33vcgbm81" path="res://assets/font/LuckiestGuy.ttf" id="2_ebtw7"]
[ext_resource type="StyleBox" uid="uid://c4p6w77gk6tqw" path="res://scenes/global/btn/normal_circle.tres" id="2_lvfc3"]
[ext_resource type="StyleBox" uid="uid://ctaxkk6gidyje" path="res://scenes/global/btn/pressed_circle.tres" id="4_ckwkd"]
[ext_resource type="StyleBox" uid="uid://bsgm6cnrj4y03" path="res://scenes/global/btn/hover_circle.tres" id="5_6578i"]
[ext_resource type="StyleBox" uid="uid://cu1k0gt41u1eo" path="res://scenes/global/btn/disabled_circle.tres" id="6_jnk8a"]
[ext_resource type="StyleBox" uid="uid://dmhpqfy30s7h7" path="res://scenes/global/btn/focus_circle.tres" id="7_2vl3f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvsss"]
bg_color = Color(0.49411765, 0.49411765, 0.49411765, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypi7l"]
bg_color = Color(0.06666667, 0.11764706, 0.18431373, 0.5019608)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="player_info" type="Control"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6578i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 680.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qvsss")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ypi7l")

[node name="skin_img" type="TextureRect" parent="Panel/Panel"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0
texture = ExtResource("1_ypi7l")

[node name="play_btn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 603.0
offset_top = 68.0
offset_right = 667.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("2_5snxr")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_lvfc3")
theme_override_styles/pressed = ExtResource("4_ckwkd")
theme_override_styles/hover = ExtResource("5_6578i")
theme_override_styles/disabled = ExtResource("6_jnk8a")
theme_override_styles/focus = ExtResource("7_2vl3f")
text = "â–¶"

[node name="delete_btn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 524.0
offset_top = 68.0
offset_right = 588.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("2_lvfc3")
theme_override_styles/pressed = ExtResource("4_ckwkd")
theme_override_styles/hover = ExtResource("5_6578i")
theme_override_styles/disabled = ExtResource("6_jnk8a")
theme_override_styles/focus = ExtResource("7_2vl3f")
text = "ðŸ—‘"

[node name="name_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_ebtw7")
theme_override_font_sizes/font_size = 48
text = "Google"
vertical_alignment = 1

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="Panel/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="Panel/delete_btn" to="." method="_on_delete_btn_pressed"]
